--- a/style.css
+++ b/style.css
@@ -1648,7 +1648,7 @@ ul {
 .upload-file {
     padding: 1rem 2rem;
     margin: 1rem;
-    background-color: #1b74bc;
+    background-color: hsl(277, 90%, 45%);
     font-family: parrafos;
     color: white;
     font-size: 18px;
@@ -1712,6 +1712,7 @@ ul {
     color: white;
     background-color: #1b74bc;
     font-weight: bold;
+    font-size: 20px;
 }
 
 .submit button:hover {
@@ -1732,6 +1733,23 @@ ul {
     max-width: 100px;
 }
 
+#cart {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.add-button {
+    background-color: hsl(277, 90%, 45%);
+    color: white; 
+    font-family: parrafos;
+    font-weight: bold;
+    padding: 15px 30px;
+    text-align: center;
+    max-width: 200px;
+}
+
 #send {
     padding: 0.5rem;
     max-height: 2.5rem;
@@ -1745,6 +1763,13 @@ ul {
     justify-content: center;
     align-items: center;
     margin-bottom: 0.5rem;
+}
+
+.final-result {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 @media screen and (max-width:575px) {
