--- a/style.css
+++ b/style.css
@@ -1623,7 +1623,7 @@ ul {
 }
 
 .headline-quote {
-    background-image: url(../../images/paul-volkmer-qVotvbsuM_c-unsplash.jpg);
+    background-image: url(images/paul-volkmer-qVotvbsuM_c-unsplash.jpg);
     padding: 12rem 3rem;
     width: 100%;
     background-repeat: no-repeat;
