--- a/style.css
+++ b/style.css
@@ -1645,16 +1645,6 @@ ul {
     justify-content: center;
 }
 
-.upload-file {
-    padding: 1rem 2rem;
-    margin: 1rem;
-    background-color: hsl(277, 90%, 45%);
-    font-family: parrafos;
-    color: white;
-    font-size: 18px;
-    border-radius: 10px;
-}
-
 .language-list3, .language-list2, .language-list1 {
     display: flex;
     flex-direction: column;
@@ -1784,11 +1774,29 @@ ul {
 }
 
 @media screen and (max-width:475px) {
-    .upload-file {
+    #upload-file {
         max-width: 200px;
     }
 }
 
 #modal {
     display: none;
+}
+
+form #myFile {
+    padding: 0 1rem;
+    background-color: hsl(277, 90%, 45%);
+    font-family: parrafos;
+    color: white;
+    font-size: 18px;
+    border-radius: 10px;
+    width: 200px;
+}
+
+#upload-file {
+    border: black solid 0.5px;
+    margin: 1rem;
+    background-color: hsl(277, 90%, 45%);
+    color: white;
+    position: relative;
 }
