--- a/style.css
+++ b/style.css
@@ -1806,3 +1806,11 @@ form #myFile {
     padding: 3px;
     margin-bottom: 1rem;
 }
+
+.note {
+    display: flex;
+    justify-content: center;
+    padding-top: 1rem;
+    color: #7c7c7c;
+    font-size: 13px;
+}
