--- a/style.css
+++ b/style.css
@@ -1815,3 +1815,22 @@ form #myFile {
     color: #7c7c7c;
     font-size: 13px;
 }
+
+.remove-button:hover {
+    cursor: pointer;
+}
+
+.service-lines {
+    display: flex;
+}
+
+.hide {
+    display: none;
+}
+
+.start-over {
+    background-color: #1762b9;
+    color: white;
+    padding: 3px 4px;
+    font-size: 22px;
+}
